fix from thermoman so "Page x of y" doesn't wrap below "<<Previous" link on last page of album.  http://gallery.menalto.com/node/68118
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@16908 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/themes/siriux/theme.css
+++ b/themes/siriux/theme.css
@@ -185,6 +185,7 @@ img.gallery-photo {
 .block-core-Navigator .first-and-previous,
 .block-core-Navigator .next-and-last {
 	display: inline;
+	float: left;
 }
 
 .block-core-Navigator .current {
